# serializer version: 1
# name: test_cli_error_extra_config
  'Vocab file received.'
# ---
# name: test_cli_error_extra_config.1
  "Bad request: 400 Bad Request: Unrecognised config was provided: 'cause-an-error'. (InvalidSessionConfigError)"
# ---
# name: test_cli_error_list
  "Bad request: 400 Bad Request: InvalidVocabFileFormatError: Invalid part of speech: 'Cause an error'"
# ---
# name: test_cli_error_list.1
  'Bad request: 400 Bad Request: Vocab file has not been provided.'
# ---
# name: test_cli_error_missing1_config
  'Vocab file received.'
# ---
# name: test_cli_error_missing1_config.1
  "Bad request: 400 Bad Request: Required config is missing: 'english-verbal-nouns'. (InvalidSessionConfigError)"
# ---
# name: test_cli_error_missing2_config
  'Vocab file received.'
# ---
# name: test_cli_error_missing2_config.1
  "Bad request: 400 Bad Request: Required config is missing: 'number-multiplechoice-options'. (InvalidSessionConfigError)"
# ---
# name: test_cli_error_type1_config
  'Vocab file received.'
# ---
# name: test_cli_error_type1_config.1
  "Bad request: 400 Bad Request: Expected type typing.ReadOnly[int] for 'number-multiplechoice-options', but received type str. (InvalidSessionConfigError)"
# ---
# name: test_cli_error_type2_config
  'Vocab file received.'
# ---
# name: test_cli_error_type2_config.1
  "Bad request: 400 Bad Request: Invalid session config: 'number-of-questions' must be an integer (got type str). (InvalidSessionConfigError)"
# ---
# name: test_cli_normal
  'Vocab file received.'
# ---
# name: test_cli_normal.1
  list([
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'in',
        'choices': list([
          'acer',
          'in',
          'laetus',
        ]),
        'prompt': 'into',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'dative singular',
          'genitive singular',
          'nominative plural',
          'vocative plural',
        ]),
        'dictionary_entry': 'farmer: agricola, agricolae, (m)',
        'main_answer': 'nominative plural',
        'prompt': 'agricolae',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'canem',
          'canis',
        ]),
        'main_answer': 'canem',
        'prompt': 'dog',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'accusative plural neuter',
          'nominative plural neuter',
          'nominative singular feminine',
        ]),
        'dictionary_entry': 'this: hic, haec, hoc',
        'main_answer': 'nominative singular feminine',
        'prompt': 'haec',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'I try',
        'choices': list([
          'I try',
          'light',
          'I take',
        ]),
        'prompt': 'conor',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'comparative nominative singular feminine',
          'comparative nominative singular masculine',
          'comparative vocative singular feminine',
          'comparative vocative singular masculine',
        ]),
        'dictionary_entry': 'light: levis, leve, (3-2)',
        'main_answer': 'comparative nominative singular masculine',
        'prompt': 'levior',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'accusative singular',
        ]),
        'dictionary_entry': 'dog: canis, canis, (m)',
        'main_answer': 'accusative singular',
        'prompt': 'canem',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'nomine',
        ]),
        'main_answer': 'nomine',
        'prompt': 'by means of a name',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'acceptablest',
          'adeptest',
          'admirablest',
          'admirabliest',
          'advantageousest',
          'advantageousliest',
          'amplest',
          'ampliest',
          'angelicalest',
          'angelicalliest',
          'angelicest',
          'bang-uppest',
          'beatificest',
          'beneficialest',
          'beneficialliest',
          'best',
          'bulliest',
          'closeliest',
          'closest',
          'completeliest',
          'completest',
          'corkest',
          'crackiest',
          'dandiest',
          'dandiliest',
          'dearest',
          'dearliest',
          'decentest',
          'decentliest',
          'dependablest',
          'dependabliest',
          'discriminatingest',
          'echtest',
          'ecofriendliest',
          'effectiveliest',
          'effectivest',
          'eldest',
          'estimablest',
          'expertest',
          'expertliest',
          'extremely acceptable',
          'extremely adept',
          'extremely admirable',
          'extremely admirably',
          'extremely advantageous',
          'extremely advantageously',
          'extremely ample',
          'extremely amply',
          'extremely angelic',
          'extremely angelical',
          'extremely angelically',
          'extremely bang-up',
          'extremely beatific',
          'extremely beneficial',
          'extremely beneficially',
          'extremely bully',
          'extremely close',
          'extremely closely',
          'extremely complete',
          'extremely completely',
          'extremely cork',
          'extremely cracky',
          'extremely dandily',
          'extremely dandy',
          'extremely dear',
          'extremely dearly',
          'extremely decent',
          'extremely decently',
          'extremely dependable',
          'extremely dependably',
          'extremely discriminating',
          'extremely echt',
          'extremely ecofriendly',
          'extremely effective',
          'extremely effectively',
          'extremely estimable',
          'extremely expert',
          'extremely expertly',
          'extremely favorable',
          'extremely favorably',
          'extremely favourable',
          'extremely fortunate',
          'extremely fortunately',
          'extremely fresh',
          'extremely freshly',
          'extremely full',
          'extremely fully',
          'extremely genuine',
          'extremely genuinely',
          'extremely good',
          'extremely good enough',
          'extremely goodish',
          'extremely goody-goody',
          'extremely great',
          'extremely greatly',
          'extremely green',
          'extremely greenly',
          'extremely groovy',
          'extremely healthful',
          'extremely healthily',
          'extremely healthy',
          'extremely honest',
          'extremely honestly',
          'extremely honorable',
          'extremely honorably',
          'extremely hot',
          'extremely hotly',
          'extremely in eff',
          'extremely in force',
          'extremely instagood',
          'extremely intellectual',
          'extremely intellectually',
          'extremely just',
          'extremely justly',
          'extremely keen',
          'extremely keenly',
          'extremely near',
          'extremely neat',
          'extremely neatly',
          'extremely nice',
          'extremely nicely',
          'extremely nifty',
          'extremely not bad',
          'extremely old',
          'extremely operative',
          'extremely operatively',
          'extremely opportune',
          'extremely opportunely',
          'extremely peachy',
          'extremely pleasing',
          'extremely pleasingly',
          'extremely practice',
          'extremely proficient',
          'extremely proficiently',
          'extremely redeemy',
          'extremely redemptive',
          'extremely reputable',
          'extremely reputably',
          'extremely respectable',
          'extremely respectably',
          'extremely right',
          'extremely righteous',
          'extremely righteously',
          'extremely ripe',
          'extremely ripely',
          'extremely safe',
          'extremely saint',
          'extremely saintlike',
          'extremely saintly',
          'extremely salutary',
          'extremely satisfactorily',
          'extremely satisfactory',
          'extremely save',
          'extremely secure',
          'extremely securely',
          'extremely serious',
          'extremely seriously',
          'extremely skilful',
          'extremely skilled',
          'extremely skillful',
          'extremely skillfully',
          'extremely slap-up',
          'extremely smash',
          'extremely solid',
          'extremely solidly',
          'extremely sound',
          'extremely soundly',
          'extremely superb',
          'extremely superbly',
          'extremely swell',
          'extremely unacceptably',
          'extremely unspoiled',
          'extremely unspoilt',
          'extremely upright',
          'extremely uprightly',
          'extremely well',
          'extremely well behave',
          'extremely well-behave',
          'extremely white',
          'favorablest',
          'favorabliest',
          'favourablest',
          'fortunateliest',
          'fortunatest',
          'freshest',
          'freshliest',
          'fullest',
          'fulliest',
          'genuineliest',
          'genuinest',
          'good enoughest',
          'goodishest',
          'goody-goodiest',
          'greatest',
          'greatliest',
          'greenest',
          'greenliest',
          'grooviest',
          'healthfulest',
          'healthiest',
          'healthiliest',
          'honestest',
          'honestliest',
          'honorablest',
          'honorabliest',
          'hotliest',
          'hottest',
          'in effest',
          'in forcest',
          'instagoodest',
          'intellectualest',
          'intellectualliest',
          'justest',
          'justliest',
          'keenest',
          'keenliest',
          'most acceptable',
          'most adept',
          'most admirable',
          'most admirably',
          'most advantageous',
          'most advantageously',
          'most ample',
          'most amply',
          'most angelic',
          'most angelical',
          'most angelically',
          'most bang-up',
          'most beatific',
          'most beneficial',
          'most beneficially',
          'most bully',
          'most close',
          'most closely',
          'most complete',
          'most completely',
          'most cork',
          'most cracky',
          'most dandily',
          'most dandy',
          'most dear',
          'most dearly',
          'most decent',
          'most decently',
          'most dependable',
          'most dependably',
          'most discriminating',
          'most echt',
          'most ecofriendly',
          'most effective',
          'most effectively',
          'most estimable',
          'most expert',
          'most expertly',
          'most favorable',
          'most favorably',
          'most favourable',
          'most fortunate',
          'most fortunately',
          'most fresh',
          'most freshly',
          'most full',
          'most fully',
          'most genuine',
          'most genuinely',
          'most good',
          'most good enough',
          'most goodish',
          'most goody-goody',
          'most great',
          'most greatly',
          'most green',
          'most greenly',
          'most groovy',
          'most healthful',
          'most healthily',
          'most healthy',
          'most honest',
          'most honestly',
          'most honorable',
          'most honorably',
          'most hot',
          'most hotly',
          'most in eff',
          'most in force',
          'most instagood',
          'most intellectual',
          'most intellectually',
          'most just',
          'most justly',
          'most keen',
          'most keenly',
          'most near',
          'most neat',
          'most neatly',
          'most nice',
          'most nicely',
          'most nifty',
          'most not bad',
          'most old',
          'most operative',
          'most operatively',
          'most opportune',
          'most opportunely',
          'most peachy',
          'most pleasing',
          'most pleasingly',
          'most practice',
          'most proficient',
          'most proficiently',
          'most redeemy',
          'most redemptive',
          'most reputable',
          'most reputably',
          'most respectable',
          'most respectably',
          'most right',
          'most righteous',
          'most righteously',
          'most ripe',
          'most ripely',
          'most safe',
          'most saint',
          'most saintlike',
          'most saintly',
          'most salutary',
          'most satisfactorily',
          'most satisfactory',
          'most save',
          'most secure',
          'most securely',
          'most serious',
          'most seriously',
          'most skilful',
          'most skilled',
          'most skillful',
          'most skillfully',
          'most slap-up',
          'most smash',
          'most solid',
          'most solidly',
          'most sound',
          'most soundly',
          'most superb',
          'most superbly',
          'most swell',
          'most unacceptably',
          'most unspoiled',
          'most unspoilt',
          'most upright',
          'most uprightly',
          'most well',
          'most well behave',
          'most well-behave',
          'most white',
          'nearest',
          'neatest',
          'neatliest',
          'niceliest',
          'nicest',
          'niftiest',
          'not baddest',
          'oldest',
          'operativeliest',
          'operativest',
          'opportuneliest',
          'opportunest',
          'peachiest',
          'pleasingest',
          'pleasingliest',
          'practicest',
          'proficientest',
          'proficientliest',
          'quite acceptable',
          'quite adept',
          'quite admirable',
          'quite admirably',
          'quite advantageous',
          'quite advantageously',
          'quite ample',
          'quite amply',
          'quite angelic',
          'quite angelical',
          'quite angelically',
          'quite bang-up',
          'quite beatific',
          'quite beneficial',
          'quite beneficially',
          'quite bully',
          'quite close',
          'quite closely',
          'quite complete',
          'quite completely',
          'quite cork',
          'quite cracky',
          'quite dandily',
          'quite dandy',
          'quite dear',
          'quite dearly',
          'quite decent',
          'quite decently',
          'quite dependable',
          'quite dependably',
          'quite discriminating',
          'quite echt',
          'quite ecofriendly',
          'quite effective',
          'quite effectively',
          'quite estimable',
          'quite expert',
          'quite expertly',
          'quite favorable',
          'quite favorably',
          'quite favourable',
          'quite fortunate',
          'quite fortunately',
          'quite fresh',
          'quite freshly',
          'quite full',
          'quite fully',
          'quite genuine',
          'quite genuinely',
          'quite good',
          'quite good enough',
          'quite goodish',
          'quite goody-goody',
          'quite great',
          'quite greatly',
          'quite green',
          'quite greenly',
          'quite groovy',
          'quite healthful',
          'quite healthily',
          'quite healthy',
          'quite honest',
          'quite honestly',
          'quite honorable',
          'quite honorably',
          'quite hot',
          'quite hotly',
          'quite in eff',
          'quite in force',
          'quite instagood',
          'quite intellectual',
          'quite intellectually',
          'quite just',
          'quite justly',
          'quite keen',
          'quite keenly',
          'quite near',
          'quite neat',
          'quite neatly',
          'quite nice',
          'quite nicely',
          'quite nifty',
          'quite not bad',
          'quite old',
          'quite operative',
          'quite operatively',
          'quite opportune',
          'quite opportunely',
          'quite peachy',
          'quite pleasing',
          'quite pleasingly',
          'quite practice',
          'quite proficient',
          'quite proficiently',
          'quite redeemy',
          'quite redemptive',
          'quite reputable',
          'quite reputably',
          'quite respectable',
          'quite respectably',
          'quite right',
          'quite righteous',
          'quite righteously',
          'quite ripe',
          'quite ripely',
          'quite safe',
          'quite saint',
          'quite saintlike',
          'quite saintly',
          'quite salutary',
          'quite satisfactorily',
          'quite satisfactory',
          'quite save',
          'quite secure',
          'quite securely',
          'quite serious',
          'quite seriously',
          'quite skilful',
          'quite skilled',
          'quite skillful',
          'quite skillfully',
          'quite slap-up',
          'quite smash',
          'quite solid',
          'quite solidly',
          'quite sound',
          'quite soundly',
          'quite superb',
          'quite superbly',
          'quite swell',
          'quite unacceptably',
          'quite unspoiled',
          'quite unspoilt',
          'quite upright',
          'quite uprightly',
          'quite well',
          'quite well behave',
          'quite well-behave',
          'quite white',
          'rather acceptable',
          'rather adept',
          'rather admirable',
          'rather admirably',
          'rather advantageous',
          'rather advantageously',
          'rather ample',
          'rather amply',
          'rather angelic',
          'rather angelical',
          'rather angelically',
          'rather bang-up',
          'rather beatific',
          'rather beneficial',
          'rather beneficially',
          'rather bully',
          'rather close',
          'rather closely',
          'rather complete',
          'rather completely',
          'rather cork',
          'rather cracky',
          'rather dandily',
          'rather dandy',
          'rather dear',
          'rather dearly',
          'rather decent',
          'rather decently',
          'rather dependable',
          'rather dependably',
          'rather discriminating',
          'rather echt',
          'rather ecofriendly',
          'rather effective',
          'rather effectively',
          'rather estimable',
          'rather expert',
          'rather expertly',
          'rather favorable',
          'rather favorably',
          'rather favourable',
          'rather fortunate',
          'rather fortunately',
          'rather fresh',
          'rather freshly',
          'rather full',
          'rather fully',
          'rather genuine',
          'rather genuinely',
          'rather good',
          'rather good enough',
          'rather goodish',
          'rather goody-goody',
          'rather great',
          'rather greatly',
          'rather green',
          'rather greenly',
          'rather groovy',
          'rather healthful',
          'rather healthily',
          'rather healthy',
          'rather honest',
          'rather honestly',
          'rather honorable',
          'rather honorably',
          'rather hot',
          'rather hotly',
          'rather in eff',
          'rather in force',
          'rather instagood',
          'rather intellectual',
          'rather intellectually',
          'rather just',
          'rather justly',
          'rather keen',
          'rather keenly',
          'rather near',
          'rather neat',
          'rather neatly',
          'rather nice',
          'rather nicely',
          'rather nifty',
          'rather not bad',
          'rather old',
          'rather operative',
          'rather operatively',
          'rather opportune',
          'rather opportunely',
          'rather peachy',
          'rather pleasing',
          'rather pleasingly',
          'rather practice',
          'rather proficient',
          'rather proficiently',
          'rather redeemy',
          'rather redemptive',
          'rather reputable',
          'rather reputably',
          'rather respectable',
          'rather respectably',
          'rather right',
          'rather righteous',
          'rather righteously',
          'rather ripe',
          'rather ripely',
          'rather safe',
          'rather saint',
          'rather saintlike',
          'rather saintly',
          'rather salutary',
          'rather satisfactorily',
          'rather satisfactory',
          'rather save',
          'rather secure',
          'rather securely',
          'rather serious',
          'rather seriously',
          'rather skilful',
          'rather skilled',
          'rather skillful',
          'rather skillfully',
          'rather slap-up',
          'rather smash',
          'rather solid',
          'rather solidly',
          'rather sound',
          'rather soundly',
          'rather superb',
          'rather superbly',
          'rather swell',
          'rather unacceptably',
          'rather unspoiled',
          'rather unspoilt',
          'rather upright',
          'rather uprightly',
          'rather well',
          'rather well behave',
          'rather well-behave',
          'rather white',
          'redeemiest',
          'redemptivest',
          'reputablest',
          'reputabliest',
          'respectablest',
          'respectabliest',
          'righteousest',
          'righteousliest',
          'rightest',
          'ripeliest',
          'ripest',
          'safest',
          'saintest',
          'saintliest',
          'saintlikest',
          'salutariest',
          'satisfactoriest',
          'satisfactoriliest',
          'savest',
          'secureliest',
          'securest',
          'seriousest',
          'seriousliest',
          'skilfulest',
          'skilledest',
          'skillfulest',
          'skillfulliest',
          'slap-upest',
          'smashest',
          'solidest',
          'solidliest',
          'soundest',
          'soundliest',
          'superbest',
          'superbliest',
          'swellest',
          'too acceptable',
          'too adept',
          'too admirable',
          'too admirably',
          'too advantageous',
          'too advantageously',
          'too ample',
          'too amply',
          'too angelic',
          'too angelical',
          'too angelically',
          'too bang-up',
          'too beatific',
          'too beneficial',
          'too beneficially',
          'too bully',
          'too close',
          'too closely',
          'too complete',
          'too completely',
          'too cork',
          'too cracky',
          'too dandily',
          'too dandy',
          'too dear',
          'too dearly',
          'too decent',
          'too decently',
          'too dependable',
          'too dependably',
          'too discriminating',
          'too echt',
          'too ecofriendly',
          'too effective',
          'too effectively',
          'too estimable',
          'too expert',
          'too expertly',
          'too favorable',
          'too favorably',
          'too favourable',
          'too fortunate',
          'too fortunately',
          'too fresh',
          'too freshly',
          'too full',
          'too fully',
          'too genuine',
          'too genuinely',
          'too good',
          'too good enough',
          'too goodish',
          'too goody-goody',
          'too great',
          'too greatly',
          'too green',
          'too greenly',
          'too groovy',
          'too healthful',
          'too healthily',
          'too healthy',
          'too honest',
          'too honestly',
          'too honorable',
          'too honorably',
          'too hot',
          'too hotly',
          'too in eff',
          'too in force',
          'too instagood',
          'too intellectual',
          'too intellectually',
          'too just',
          'too justly',
          'too keen',
          'too keenly',
          'too near',
          'too neat',
          'too neatly',
          'too nice',
          'too nicely',
          'too nifty',
          'too not bad',
          'too old',
          'too operative',
          'too operatively',
          'too opportune',
          'too opportunely',
          'too peachy',
          'too pleasing',
          'too pleasingly',
          'too practice',
          'too proficient',
          'too proficiently',
          'too redeemy',
          'too redemptive',
          'too reputable',
          'too reputably',
          'too respectable',
          'too respectably',
          'too right',
          'too righteous',
          'too righteously',
          'too ripe',
          'too ripely',
          'too safe',
          'too saint',
          'too saintlike',
          'too saintly',
          'too salutary',
          'too satisfactorily',
          'too satisfactory',
          'too save',
          'too secure',
          'too securely',
          'too serious',
          'too seriously',
          'too skilful',
          'too skilled',
          'too skillful',
          'too skillfully',
          'too slap-up',
          'too smash',
          'too solid',
          'too solidly',
          'too sound',
          'too soundly',
          'too superb',
          'too superbly',
          'too swell',
          'too unacceptably',
          'too unspoiled',
          'too unspoilt',
          'too upright',
          'too uprightly',
          'too well',
          'too well behave',
          'too well-behave',
          'too white',
          'unacceptabliest',
          'unspoiledest',
          'unspoiltest',
          'uprightest',
          'uprightliest',
          'very acceptable',
          'very adept',
          'very admirable',
          'very admirably',
          'very advantageous',
          'very advantageously',
          'very ample',
          'very amply',
          'very angelic',
          'very angelical',
          'very angelically',
          'very bang-up',
          'very beatific',
          'very beneficial',
          'very beneficially',
          'very bully',
          'very close',
          'very closely',
          'very complete',
          'very completely',
          'very cork',
          'very cracky',
          'very dandily',
          'very dandy',
          'very dear',
          'very dearly',
          'very decent',
          'very decently',
          'very dependable',
          'very dependably',
          'very discriminating',
          'very echt',
          'very ecofriendly',
          'very effective',
          'very effectively',
          'very estimable',
          'very expert',
          'very expertly',
          'very favorable',
          'very favorably',
          'very favourable',
          'very fortunate',
          'very fortunately',
          'very fresh',
          'very freshly',
          'very full',
          'very fully',
          'very genuine',
          'very genuinely',
          'very good',
          'very good enough',
          'very goodish',
          'very goody-goody',
          'very great',
          'very greatly',
          'very green',
          'very greenly',
          'very groovy',
          'very healthful',
          'very healthily',
          'very healthy',
          'very honest',
          'very honestly',
          'very honorable',
          'very honorably',
          'very hot',
          'very hotly',
          'very in eff',
          'very in force',
          'very instagood',
          'very intellectual',
          'very intellectually',
          'very just',
          'very justly',
          'very keen',
          'very keenly',
          'very near',
          'very neat',
          'very neatly',
          'very nice',
          'very nicely',
          'very nifty',
          'very not bad',
          'very old',
          'very operative',
          'very operatively',
          'very opportune',
          'very opportunely',
          'very peachy',
          'very pleasing',
          'very pleasingly',
          'very practice',
          'very proficient',
          'very proficiently',
          'very redeemy',
          'very redemptive',
          'very reputable',
          'very reputably',
          'very respectable',
          'very respectably',
          'very right',
          'very righteous',
          'very righteously',
          'very ripe',
          'very ripely',
          'very safe',
          'very saint',
          'very saintlike',
          'very saintly',
          'very salutary',
          'very satisfactorily',
          'very satisfactory',
          'very save',
          'very secure',
          'very securely',
          'very serious',
          'very seriously',
          'very skilful',
          'very skilled',
          'very skillful',
          'very skillfully',
          'very slap-up',
          'very smash',
          'very solid',
          'very solidly',
          'very sound',
          'very soundly',
          'very superb',
          'very superbly',
          'very swell',
          'very unacceptably',
          'very unspoiled',
          'very unspoilt',
          'very upright',
          'very uprightly',
          'very well',
          'very well behave',
          'very well-behave',
          'very white',
          'well behavest',
          'well-behavest',
          'whitest',
        ]),
        'main_answer': 'best',
        'prompt': 'optime',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'bonus',
          'bona',
          'bonum',
        ]),
        'prompt': 'bonus',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'levis',
        'choices': list([
          'e',
          'audio',
          'levis',
        ]),
        'prompt': 'light',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'agricolas',
        ]),
        'components': 'accusative plural',
        'main_answer': 'agricolas',
        'prompt': 'farmer: agricola, agricolae, (m)',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'ample',
          'astronomic',
          'astronomical',
          'bangy',
          'bear-size',
          'big',
          'biggish',
          'blown-up',
          'bombastic',
          'bouff',
          'broad',
          'brobdingnagian',
          'bulky',
          'capacious',
          'colossal',
          'comprehensive',
          'conspicuous',
          'cosmic',
          'declamatory',
          'deep',
          'double',
          'elephantine',
          'enceinte',
          'enlary',
          'enormous',
          'epic',
          'expectant',
          'extended',
          'extensive',
          'full-size',
          'galactic',
          'gargantuan',
          'generous',
          'giant',
          'gigantic',
          'grand',
          'gravid',
          'great',
          'heavy',
          'heroic',
          'huge',
          'hulking',
          'hulky',
          'humongous',
          'immense',
          'important',
          'jumbo',
          'king-size',
          'large',
          'large-mouth',
          'large-scale',
          'larger-than-life',
          'largish',
          'life-size',
          'life-sy',
          'lifesize',
          'macro',
          'macroscopic',
          'macroscopical',
          'magnanimous',
          'mammoth',
          'man-size',
          'massive',
          'medium-large',
          'monolithic',
          'monstrous',
          'monumental',
          'mountainous',
          'orotund',
          'outsize',
          'outsized',
          'overlarge',
          'oversize',
          'oversized',
          'plump',
          'pregnant',
          'prodigious',
          'prominent',
          'puffy',
          'queen-size',
          'rangy',
          'rhetorical',
          'significant',
          'sizable',
          'sizeable',
          'spacious',
          'stupendous',
          'super',
          'thump',
          'titanic',
          'too large',
          'tremendous',
          'tumid',
          'turgid',
          'vast',
          'volume',
          'voluminous',
          'wallopy',
          'whack',
          'whoppy',
          'wide',
          'wide-rangy',
          'with ch',
        ]),
        'main_answer': 'large',
        'prompt': 'ingentia',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'dative singular feminine',
          'dative singular masculine',
          'dative singular neuter',
          'nominative plural masculine',
        ]),
        'dictionary_entry': 'that: ille, illa, illud',
        'main_answer': 'nominative plural masculine',
        'prompt': 'illi',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'laetus',
        'choices': list([
          'e',
          'laetus',
          'ego',
        ]),
        'prompt': 'happy',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'genitive singular',
          'nominative plural',
          'vocative plural',
        ]),
        'dictionary_entry': 'boy: puer, pueri, (m)',
        'main_answer': 'nominative plural',
        'prompt': 'pueri',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'capio',
        'choices': list([
          'hic',
          'capio',
          'ego',
        ]),
        'prompt': 'I take',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'of that',
        ]),
        'main_answer': 'of that',
        'prompt': 'illius',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'levis',
          'leve',
        ]),
        'prompt': 'levis',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'ingens',
          'ingentis',
        ]),
        'prompt': 'ingens',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'inquam',
        'choices': list([
          'ingredior',
          'laetus',
          'inquam',
        ]),
        'prompt': 'I say',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'comparative ablative singular feminine',
          'comparative ablative singular masculine',
          'comparative ablative singular neuter',
        ]),
        'dictionary_entry': 'large: ingens, ingentis, (3-1)',
        'main_answer': 'comparative ablative singular masculine',
        'prompt': 'ingentiore',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'good',
        'choices': list([
          'good',
          'I say',
          'dog',
        ]),
        'prompt': 'bonus',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'name',
        'choices': list([
          'name',
          'from',
          'girl',
        ]),
        'prompt': 'nomen',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'puer',
        'choices': list([
          'puer',
          'capio',
          'in',
        ]),
        'prompt': 'boy',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'puer',
        'choices': list([
          'laetus',
          'puer',
          'nomen',
        ]),
        'prompt': 'boy',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'ablazer',
          'abstemiouser',
          'airier',
          'autofluorescenter',
          'bioluminescenter',
          'brighter',
          'buoyanter',
          'calorie-freeer',
          'cander',
          'candescenter',
          'casualer',
          'cleaner',
          'clearer',
          'deficienter',
          'digestibler',
          'easier',
          'fainter',
          'fat-freeer',
          'fatler',
          'floatier',
          'flooder',
          'floodlighter',
          'fluorescenter',
          'fooler',
          'frivolouser',
          'gentler',
          'idler',
          'iller',
          'illuminateder',
          'incandescenter',
          'inflameder',
          'insignificanter',
          'insufficienter',
          'lampliter',
          'light-armer',
          'light-coloreder',
          'light-dutier',
          'light-footer',
          'light-headeder',
          'lighter',
          'lighter-than-airer',
          'lightheadeder',
          'lighting-uper',
          'lightly-armer',
          'lightsomer',
          'lightweighter',
          'liter',
          'litter',
          'livider',
          'looser',
          'low-caler',
          'low-densitier',
          'luminescenter',
          'more ablaze',
          'more abstemious',
          'more airy',
          'more autofluorescent',
          'more bioluminescent',
          'more bright',
          'more buoyant',
          'more calorie-free',
          'more cand',
          'more candescent',
          'more casual',
          'more clean',
          'more clear',
          'more deficient',
          'more digestible',
          'more easy',
          'more faint',
          'more fat-free',
          'more fatle',
          'more floaty',
          'more flood',
          'more floodlight',
          'more fluorescent',
          'more fool',
          'more frivolous',
          'more gentle',
          'more idle',
          'more ill',
          'more illuminated',
          'more incandescent',
          'more inflamed',
          'more insignificant',
          'more insufficient',
          'more lamplit',
          'more light',
          'more light-arm',
          'more light-colored',
          'more light-duty',
          'more light-foot',
          'more light-headed',
          'more lighter-than-air',
          'more lightheaded',
          'more lighting-up',
          'more lightly-arm',
          'more lightsome',
          'more lightweight',
          'more lit',
          'more lite',
          'more livid',
          'more loose',
          'more low-cal',
          'more low-density',
          'more luminescent',
          'more nonfat',
          'more pale',
          'more palish',
          'more pastel',
          'more phosphorescent',
          'more powdery',
          'more promiscuous',
          'more pure',
          'more redden',
          'more scant',
          'more shallow',
          'more short',
          'more sick',
          'more sluttish',
          'more soft',
          'more sunlit',
          'more sunny',
          'more sunstruck',
          'more swoon',
          'more temperate',
          'more thin',
          'more trippy',
          'more unaccented',
          'more unchaste',
          'more uncloud',
          'more undemanding',
          'more unimportant',
          'more unstress',
          'more wakeful',
          'more wanton',
          'more weak',
          'more well-light',
          'more white',
          'nonfatter',
          'paler',
          'palisher',
          'pasteller',
          'phosphorescenter',
          'powderier',
          'promiscuouser',
          'purer',
          'reddener',
          'scanter',
          'shallower',
          'shorter',
          'sicker',
          'sluttisher',
          'softer',
          'sunlitter',
          'sunnier',
          'sunstrucker',
          'swooner',
          'temperater',
          'thinner',
          'trippier',
          'unaccenteder',
          'unchaster',
          'unclouder',
          'undemandinger',
          'unimportanter',
          'unstresser',
          'wakefuler',
          'wantoner',
          'weaker',
          'well-lighter',
          'whiter',
          'worse',
        ]),
        'main_answer': 'lighter',
        'prompt': 'levioris',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'has',
        ]),
        'components': 'accusative plural feminine',
        'main_answer': 'has',
        'prompt': 'this: hic, haec, hoc',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'laetus',
          'laeta',
          'laetum',
        ]),
        'prompt': 'laetus',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'laetus',
        'choices': list([
          'laetus',
          'puella',
          'hic',
        ]),
        'prompt': 'happy',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'light',
        'choices': list([
          'into',
          'light',
          'good',
        ]),
        'prompt': 'levis',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'dative singular feminine',
          'dative singular masculine',
          'dative singular neuter',
          'nominative plural masculine',
        ]),
        'dictionary_entry': 'that: ille, illa, illud',
        'main_answer': 'nominative plural masculine',
        'prompt': 'illi',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'acute',
          'bang-up',
          'bully',
          'cork',
          'cracky',
          'cutty',
          'dandy',
          'discriminating',
          'exquisite',
          'good',
          'great',
          'groovy',
          'incisive',
          'intense',
          'keen',
          'knifelike',
          'lancinate',
          'neat',
          'nifty',
          'not bad',
          'old',
          'peachy',
          'penetrative',
          'penetraty',
          'perceptive',
          'piercing',
          'sharp',
          'slap-up',
          'smash',
          'stabby',
          'swell',
        ]),
        'main_answer': 'keen',
        'prompt': 'acri',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'bonus',
          'bona',
          'bonum',
        ]),
        'prompt': 'bonus',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'conor',
        'choices': list([
          'levis',
          'ingredior',
          'conor',
        ]),
        'prompt': 'I try',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'happy',
        'choices': list([
          'happy',
          'good',
          'keen',
        ]),
        'prompt': 'laetus',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'comparative accusative plural feminine',
          'comparative accusative plural masculine',
          'comparative nominative plural feminine',
          'comparative nominative plural masculine',
          'comparative vocative plural feminine',
          'comparative vocative plural masculine',
        ]),
        'dictionary_entry': 'good: bonus, bona, bonum, (2-1-2)',
        'main_answer': 'comparative nominative plural masculine',
        'prompt': 'meliores',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'hic',
          'haec',
          'hoc',
        ]),
        'prompt': 'hic',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'inquimus',
        ]),
        'main_answer': 'inquimus',
        'prompt': 'we say',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'e',
        'choices': list([
          'agricola',
          'laetus',
          'e',
        ]),
        'prompt': 'from',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'genitive singular',
        ]),
        'dictionary_entry': 'name: nomen, nominis, (n)',
        'main_answer': 'genitive singular',
        'prompt': 'nominis',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'nomen',
        'choices': list([
          'in',
          'capio',
          'nomen',
        ]),
        'prompt': 'name',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'puellae',
          'puellas',
        ]),
        'main_answer': 'puellae',
        'prompt': 'girls',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'ingens',
          'ingentis',
        ]),
        'prompt': 'ingens',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'ablaze',
          'abstemious',
          'airy',
          'autofluorescent',
          'bioluminescent',
          'bright',
          'buoyant',
          'calorie-free',
          'cand',
          'candescent',
          'casual',
          'clean',
          'clear',
          'deficient',
          'digestible',
          'easy',
          'faint',
          'fat-free',
          'fatle',
          'floaty',
          'flood',
          'floodlight',
          'fluorescent',
          'fool',
          'frivolous',
          'gentle',
          'idle',
          'ill',
          'illuminated',
          'incandescent',
          'inflamed',
          'insignificant',
          'insufficient',
          'lamplit',
          'light',
          'light-arm',
          'light-colored',
          'light-duty',
          'light-foot',
          'light-headed',
          'lighter-than-air',
          'lightheaded',
          'lighting-up',
          'lightly-arm',
          'lightsome',
          'lightweight',
          'lit',
          'lite',
          'livid',
          'loose',
          'low-cal',
          'low-density',
          'luminescent',
          'nonfat',
          'pale',
          'palish',
          'pastel',
          'phosphorescent',
          'powdery',
          'promiscuous',
          'pure',
          'redden',
          'scant',
          'shallow',
          'short',
          'sick',
          'sluttish',
          'soft',
          'sunlit',
          'sunny',
          'sunstruck',
          'swoon',
          'temperate',
          'thin',
          'trippy',
          'unaccented',
          'unchaste',
          'uncloud',
          'undemanding',
          'unimportant',
          'unstress',
          'wakeful',
          'wanton',
          'weak',
          'well-light',
          'white',
        ]),
        'main_answer': 'light',
        'prompt': 'leve',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'puella',
        'choices': list([
          'puer',
          'puella',
          'e',
        ]),
        'prompt': 'girl',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'ingredienda',
          'ingrediendae',
          'ingrediendam',
          'ingrediendarum',
          'ingrediendas',
          'ingrediende',
          'ingrediendi',
          'ingrediendis',
          'ingrediendo',
          'ingrediendorum',
          'ingrediendos',
          'ingrediendum',
          'ingrediendus',
          'ingrediens',
          'ingrediente',
          'ingredientem',
          'ingredientes',
          'ingredienti',
          'ingredientia',
          'ingredientibus',
          'ingredientis',
          'ingredientium',
          'ingressa',
          'ingressae',
          'ingressam',
          'ingressarum',
          'ingressas',
          'ingresse',
          'ingressi',
          'ingressis',
          'ingresso',
          'ingressorum',
          'ingressos',
          'ingressum',
          'ingressura',
          'ingressurae',
          'ingressuram',
          'ingressurarum',
          'ingressuras',
          'ingressure',
          'ingressuri',
          'ingressuris',
          'ingressuro',
          'ingressurorum',
          'ingressuros',
          'ingressurum',
          'ingressurus',
          'ingressus',
        ]),
        'main_answer': 'ingrediens',
        'prompt': 'entering',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'huic',
        ]),
        'main_answer': 'huic',
        'prompt': 'to this',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'that',
        'choices': list([
          'large',
          'dog',
          'that',
        ]),
        'prompt': 'ille',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'ablazest',
          'abstemiousest',
          'airiest',
          'autofluorescentest',
          'bioluminescentest',
          'brightest',
          'buoyantest',
          'calorie-freeest',
          'candescentest',
          'candest',
          'casualest',
          'cleanest',
          'clearest',
          'deficientest',
          'digestiblest',
          'easiest',
          'extremely ablaze',
          'extremely abstemious',
          'extremely airy',
          'extremely autofluorescent',
          'extremely bioluminescent',
          'extremely bright',
          'extremely buoyant',
          'extremely calorie-free',
          'extremely cand',
          'extremely candescent',
          'extremely casual',
          'extremely clean',
          'extremely clear',
          'extremely deficient',
          'extremely digestible',
          'extremely easy',
          'extremely faint',
          'extremely fat-free',
          'extremely fatle',
          'extremely floaty',
          'extremely flood',
          'extremely floodlight',
          'extremely fluorescent',
          'extremely fool',
          'extremely frivolous',
          'extremely gentle',
          'extremely idle',
          'extremely ill',
          'extremely illuminated',
          'extremely incandescent',
          'extremely inflamed',
          'extremely insignificant',
          'extremely insufficient',
          'extremely lamplit',
          'extremely light',
          'extremely light-arm',
          'extremely light-colored',
          'extremely light-duty',
          'extremely light-foot',
          'extremely light-headed',
          'extremely lighter-than-air',
          'extremely lightheaded',
          'extremely lighting-up',
          'extremely lightly-arm',
          'extremely lightsome',
          'extremely lightweight',
          'extremely lit',
          'extremely lite',
          'extremely livid',
          'extremely loose',
          'extremely low-cal',
          'extremely low-density',
          'extremely luminescent',
          'extremely nonfat',
          'extremely pale',
          'extremely palish',
          'extremely pastel',
          'extremely phosphorescent',
          'extremely powdery',
          'extremely promiscuous',
          'extremely pure',
          'extremely redden',
          'extremely scant',
          'extremely shallow',
          'extremely short',
          'extremely sick',
          'extremely sluttish',
          'extremely soft',
          'extremely sunlit',
          'extremely sunny',
          'extremely sunstruck',
          'extremely swoon',
          'extremely temperate',
          'extremely thin',
          'extremely trippy',
          'extremely unaccented',
          'extremely unchaste',
          'extremely uncloud',
          'extremely undemanding',
          'extremely unimportant',
          'extremely unstress',
          'extremely wakeful',
          'extremely wanton',
          'extremely weak',
          'extremely well-light',
          'extremely white',
          'faintest',
          'fat-freeest',
          'fatlest',
          'floatiest',
          'floodest',
          'floodlightest',
          'fluorescentest',
          'foolest',
          'frivolousest',
          'gentlest',
          'idlest',
          'illest',
          'illuminatedest',
          'incandescentest',
          'inflamedest',
          'insignificantest',
          'insufficientest',
          'lamplitest',
          'light-armest',
          'light-coloredest',
          'light-dutiest',
          'light-footest',
          'light-headedest',
          'lighter-than-airest',
          'lightest',
          'lightheadedest',
          'lighting-upest',
          'lightly-armest',
          'lightsomest',
          'lightweightest',
          'litest',
          'littest',
          'lividest',
          'loosest',
          'low-calest',
          'low-densitiest',
          'luminescentest',
          'most ablaze',
          'most abstemious',
          'most airy',
          'most autofluorescent',
          'most bioluminescent',
          'most bright',
          'most buoyant',
          'most calorie-free',
          'most cand',
          'most candescent',
          'most casual',
          'most clean',
          'most clear',
          'most deficient',
          'most digestible',
          'most easy',
          'most faint',
          'most fat-free',
          'most fatle',
          'most floaty',
          'most flood',
          'most floodlight',
          'most fluorescent',
          'most fool',
          'most frivolous',
          'most gentle',
          'most idle',
          'most ill',
          'most illuminated',
          'most incandescent',
          'most inflamed',
          'most insignificant',
          'most insufficient',
          'most lamplit',
          'most light',
          'most light-arm',
          'most light-colored',
          'most light-duty',
          'most light-foot',
          'most light-headed',
          'most lighter-than-air',
          'most lightheaded',
          'most lighting-up',
          'most lightly-arm',
          'most lightsome',
          'most lightweight',
          'most lit',
          'most lite',
          'most livid',
          'most loose',
          'most low-cal',
          'most low-density',
          'most luminescent',
          'most nonfat',
          'most pale',
          'most palish',
          'most pastel',
          'most phosphorescent',
          'most powdery',
          'most promiscuous',
          'most pure',
          'most redden',
          'most scant',
          'most shallow',
          'most short',
          'most sick',
          'most sluttish',
          'most soft',
          'most sunlit',
          'most sunny',
          'most sunstruck',
          'most swoon',
          'most temperate',
          'most thin',
          'most trippy',
          'most unaccented',
          'most unchaste',
          'most uncloud',
          'most undemanding',
          'most unimportant',
          'most unstress',
          'most wakeful',
          'most wanton',
          'most weak',
          'most well-light',
          'most white',
          'nonfattest',
          'palest',
          'palishest',
          'pastellest',
          'phosphorescentest',
          'powderiest',
          'promiscuousest',
          'purest',
          'quite ablaze',
          'quite abstemious',
          'quite airy',
          'quite autofluorescent',
          'quite bioluminescent',
          'quite bright',
          'quite buoyant',
          'quite calorie-free',
          'quite cand',
          'quite candescent',
          'quite casual',
          'quite clean',
          'quite clear',
          'quite deficient',
          'quite digestible',
          'quite easy',
          'quite faint',
          'quite fat-free',
          'quite fatle',
          'quite floaty',
          'quite flood',
          'quite floodlight',
          'quite fluorescent',
          'quite fool',
          'quite frivolous',
          'quite gentle',
          'quite idle',
          'quite ill',
          'quite illuminated',
          'quite incandescent',
          'quite inflamed',
          'quite insignificant',
          'quite insufficient',
          'quite lamplit',
          'quite light',
          'quite light-arm',
          'quite light-colored',
          'quite light-duty',
          'quite light-foot',
          'quite light-headed',
          'quite lighter-than-air',
          'quite lightheaded',
          'quite lighting-up',
          'quite lightly-arm',
          'quite lightsome',
          'quite lightweight',
          'quite lit',
          'quite lite',
          'quite livid',
          'quite loose',
          'quite low-cal',
          'quite low-density',
          'quite luminescent',
          'quite nonfat',
          'quite pale',
          'quite palish',
          'quite pastel',
          'quite phosphorescent',
          'quite powdery',
          'quite promiscuous',
          'quite pure',
          'quite redden',
          'quite scant',
          'quite shallow',
          'quite short',
          'quite sick',
          'quite sluttish',
          'quite soft',
          'quite sunlit',
          'quite sunny',
          'quite sunstruck',
          'quite swoon',
          'quite temperate',
          'quite thin',
          'quite trippy',
          'quite unaccented',
          'quite unchaste',
          'quite uncloud',
          'quite undemanding',
          'quite unimportant',
          'quite unstress',
          'quite wakeful',
          'quite wanton',
          'quite weak',
          'quite well-light',
          'quite white',
          'rather ablaze',
          'rather abstemious',
          'rather airy',
          'rather autofluorescent',
          'rather bioluminescent',
          'rather bright',
          'rather buoyant',
          'rather calorie-free',
          'rather cand',
          'rather candescent',
          'rather casual',
          'rather clean',
          'rather clear',
          'rather deficient',
          'rather digestible',
          'rather easy',
          'rather faint',
          'rather fat-free',
          'rather fatle',
          'rather floaty',
          'rather flood',
          'rather floodlight',
          'rather fluorescent',
          'rather fool',
          'rather frivolous',
          'rather gentle',
          'rather idle',
          'rather ill',
          'rather illuminated',
          'rather incandescent',
          'rather inflamed',
          'rather insignificant',
          'rather insufficient',
          'rather lamplit',
          'rather light',
          'rather light-arm',
          'rather light-colored',
          'rather light-duty',
          'rather light-foot',
          'rather light-headed',
          'rather lighter-than-air',
          'rather lightheaded',
          'rather lighting-up',
          'rather lightly-arm',
          'rather lightsome',
          'rather lightweight',
          'rather lit',
          'rather lite',
          'rather livid',
          'rather loose',
          'rather low-cal',
          'rather low-density',
          'rather luminescent',
          'rather nonfat',
          'rather pale',
          'rather palish',
          'rather pastel',
          'rather phosphorescent',
          'rather powdery',
          'rather promiscuous',
          'rather pure',
          'rather redden',
          'rather scant',
          'rather shallow',
          'rather short',
          'rather sick',
          'rather sluttish',
          'rather soft',
          'rather sunlit',
          'rather sunny',
          'rather sunstruck',
          'rather swoon',
          'rather temperate',
          'rather thin',
          'rather trippy',
          'rather unaccented',
          'rather unchaste',
          'rather uncloud',
          'rather undemanding',
          'rather unimportant',
          'rather unstress',
          'rather wakeful',
          'rather wanton',
          'rather weak',
          'rather well-light',
          'rather white',
          'reddenest',
          'scantest',
          'shallowest',
          'shortest',
          'sickest',
          'sluttishest',
          'softest',
          'sunlittest',
          'sunniest',
          'sunstruckest',
          'swoonest',
          'temperatest',
          'thinnest',
          'too ablaze',
          'too abstemious',
          'too airy',
          'too autofluorescent',
          'too bioluminescent',
          'too bright',
          'too buoyant',
          'too calorie-free',
          'too cand',
          'too candescent',
          'too casual',
          'too clean',
          'too clear',
          'too deficient',
          'too digestible',
          'too easy',
          'too faint',
          'too fat-free',
          'too fatle',
          'too floaty',
          'too flood',
          'too floodlight',
          'too fluorescent',
          'too fool',
          'too frivolous',
          'too gentle',
          'too idle',
          'too ill',
          'too illuminated',
          'too incandescent',
          'too inflamed',
          'too insignificant',
          'too insufficient',
          'too lamplit',
          'too light',
          'too light-arm',
          'too light-colored',
          'too light-duty',
          'too light-foot',
          'too light-headed',
          'too lighter-than-air',
          'too lightheaded',
          'too lighting-up',
          'too lightly-arm',
          'too lightsome',
          'too lightweight',
          'too lit',
          'too lite',
          'too livid',
          'too loose',
          'too low-cal',
          'too low-density',
          'too luminescent',
          'too nonfat',
          'too pale',
          'too palish',
          'too pastel',
          'too phosphorescent',
          'too powdery',
          'too promiscuous',
          'too pure',
          'too redden',
          'too scant',
          'too shallow',
          'too short',
          'too sick',
          'too sluttish',
          'too soft',
          'too sunlit',
          'too sunny',
          'too sunstruck',
          'too swoon',
          'too temperate',
          'too thin',
          'too trippy',
          'too unaccented',
          'too unchaste',
          'too uncloud',
          'too undemanding',
          'too unimportant',
          'too unstress',
          'too wakeful',
          'too wanton',
          'too weak',
          'too well-light',
          'too white',
          'trippiest',
          'unaccentedest',
          'unchastest',
          'uncloudest',
          'undemandingest',
          'unimportantest',
          'unstressest',
          'very ablaze',
          'very abstemious',
          'very airy',
          'very autofluorescent',
          'very bioluminescent',
          'very bright',
          'very buoyant',
          'very calorie-free',
          'very cand',
          'very candescent',
          'very casual',
          'very clean',
          'very clear',
          'very deficient',
          'very digestible',
          'very easy',
          'very faint',
          'very fat-free',
          'very fatle',
          'very floaty',
          'very flood',
          'very floodlight',
          'very fluorescent',
          'very fool',
          'very frivolous',
          'very gentle',
          'very idle',
          'very ill',
          'very illuminated',
          'very incandescent',
          'very inflamed',
          'very insignificant',
          'very insufficient',
          'very lamplit',
          'very light',
          'very light-arm',
          'very light-colored',
          'very light-duty',
          'very light-foot',
          'very light-headed',
          'very lighter-than-air',
          'very lightheaded',
          'very lighting-up',
          'very lightly-arm',
          'very lightsome',
          'very lightweight',
          'very lit',
          'very lite',
          'very livid',
          'very loose',
          'very low-cal',
          'very low-density',
          'very luminescent',
          'very nonfat',
          'very pale',
          'very palish',
          'very pastel',
          'very phosphorescent',
          'very powdery',
          'very promiscuous',
          'very pure',
          'very redden',
          'very scant',
          'very shallow',
          'very short',
          'very sick',
          'very sluttish',
          'very soft',
          'very sunlit',
          'very sunny',
          'very sunstruck',
          'very swoon',
          'very temperate',
          'very thin',
          'very trippy',
          'very unaccented',
          'very unchaste',
          'very uncloud',
          'very undemanding',
          'very unimportant',
          'very unstress',
          'very wakeful',
          'very wanton',
          'very weak',
          'very well-light',
          'very white',
          'wakefulest',
          'wantonest',
          'weakest',
          'well-lightest',
          'whitest',
          'worst',
        ]),
        'main_answer': 'lightest',
        'prompt': 'levissima',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
  ])
# ---
